<resources>
    <string name="app_name">Cancionero Catolico</string>

    <!-- Buttons Main Activity  -->
    <string name="button_viewSongs">Ver canciones</string>
    <string name="button_viewMyLists">Mis listas</string>
    <string name="button_playChords">Acordes</string>
    <!-- Buttons Other Activities  -->
    <string name="button_login">Acceder con Google</string>
    <string name="button_addSong">Agregar</string>
    <string name="button_updateSong">Actualizar</string>
    <string name="button_suggestChange">Enviar</string>
    <string name="button_register">Registrar</string>

    <!-- Strings de Toast -->
    <string name="toast_login_failed">Inicio sesion con Google fallido</string>
    <string name="toast_login_welcome">Bienvenido/a %s</string>
    <string name="toast_login_welcome_back">Bienvenido/a de nuevo %s</string>
    <string name="toast_logout_successful">Sesion finalizada exitosamente</string>
    <string name="toast_searching_by">Buscando %s</string>

    <string name="toast_song_created">Cancion creada</string>
    <string name="toast_song_updated">Cancion actualizada</string>
    <string name="toast_song_deleted">Cancion eliminada</string>
    <string name="toast_blank_fields">Campos incompletos</string>
    <string name="toast_suggestion_sent">Sugerencia enviada</string>
    <string name="toast_song_unable_to_delete">No se pudo eliminar, pertenece a una lista</string>
    <string name="toast_shareSong">Compartiendo cancion</string>
    <string name="toast_song_added_toList">Cancion agregada a %s</string>

    <string name="toast_noLists">No hay listas para mostrar</string>
    <string name="toast_list_created_successful">Lista creada exitosamente</string>
    <string name="toast_list_replaced_successful">Lista reemplazada exitosamente</string>
    <string name="toast_list_deleted">Lista eliminada</string>
    <string name="toast_shareList">Compartiendo lista</string>
    <string name="toast_unableToShareFavsList">No se puede compartir lista Favoritos</string>
    <string name="toast_list_name_maxLengthReached">Longitud no permitida</string>
    <plurals name="toast_songs_added_toList">
        <item quantity="one">Cancion agregada a %s</item>
        <item quantity="other">Canciones agregadas a %s</item>
    </plurals>
    <plurals name="toast_songs_deleted_fromList">
        <item quantity="one">Cancion eliminada de la lista</item>
        <item quantity="other">Canciones eliminadas de la lista</item>
    </plurals>

    <!-- Strings de menu y dialogs -->
    <string name="search_by_songs">Buscar…</string>
    <string name="add_new_song">Nueva Cancion</string>
    <string name="show_filters">Ver filtros</string>
    <string name="refresh_filters">Borrar filtros</string>
    <string name="seasons_of_mass">Tiempos liturgicos y otros</string>
    <string name="moments_of_mass">Momentos de misa</string>
    <string name="increase_note">Subir semitono</string>
    <string name="decrease_note">Bajar semitono</string>
    <string name="translate_chord">Traducir acorde</string>
    <string name="suggest_edit">Sugerir edición</string>
    <string name="add_toList">Agregar a Lista</string>
    <string name="add_toFavs">Agregar a Favs</string>
    <string name="choose_list">Elija la lista</string>
    <string name="choose_option">Elija una opcion</string>
    <string name="edit_song">Editar</string>
    <string name="share">Compartir</string>  <!--Compartir lista, cancion-->
    <string name="delete">Eliminar</string>  <!--Eliminar lista, cancion, cancion de lista seleccionada-->
    <string name="msg_edit_list_name">Asigna un nuevo nombre</string>
    <string name="import_list">Importar lista</string>
    <string name="msg_import_list">Pega la lista a importar</string>
    <string name="createList">Crear Lista</string>
    <string name="replaceList">Reemplazar Lista</string>
    <string name="cancel_dialog">Cancelar</string>
    <string name="submit_dialog_changeListName">Guardar</string>
    <string name="log_out">Cerrar Sesion</string>

    <!-- Titulos -->
    <string name="viewSongs_title">Listado canciones</string>
    <string name="viewMyLists_title">Mis listas</string>
    <string name="viewSpecificList_title">Detalle lista</string>
    <string name="addSong_title">Crear cancion</string>
    <string name="readSong_title">Cancion</string>
    <string name="updateSong_title">Actualizar cancion</string>
    <string name="suggestSong_title">Sugerir cambio</string>
    <string name="login_title">Iniciar Sesion</string>

    <!-- Elements descriptions (accesibility)  -->
    <string name="list_icon_desc">iconoLista</string>
    <string name="song_icon">Song Icon</string>
    <!-- Hints  -->
    <string name="hint_search_bar">Buscar palabra clave...</string>
    <string name="hint_song_title">Titulo</string>
    <string name="hint_song_artist">Artista</string>
    <string name="hint_song_lyrics">Letras</string>
    <string name="hint_song_tags">Tags</string>
    <string name="hint_import_list">Nombre Lista\n  Cancion1\n  Cancion2\n  Cancion3\n  Cancion x</string> <!--Otra opcion de texto es: Pega el texto como te lo compartieron-->

    <!-- Chips Partes de misa -->
    <string name="chip_entrance">Entrada</string>
    <string name="chip_mercy">Piedad</string>
    <string name="chip_glory">Gloria</string>
    <string name="chip_psalm">Salmo</string>
    <string name="chip_alleluia">Proclamacion</string>
    <string name="chip_offertory">Ofertorio</string>
    <string name="chip_holy">Santo</string>
    <string name="chip_peace">Paz</string>
    <string name="chip_lambGod">Cordero</string>
    <string name="chip_communion">Comunion</string>
    <string name="chip_postCommunion">Reflexion</string>
    <string name="chip_mary">Maria</string>
    <string name="chip_ourFather">Padre Nuestro</string>
    <string name="chip_exit">Salida</string>
    <!-- Chips Tiempos liturgicos y otros -->
    <string name="chip_ordinary">Ordinario</string>
    <string name="chip_lent">Cuaresma</string>
    <string name="chip_holyWeek">Semana Santa</string>
    <string name="chip_easter">Pascua</string>
    <string name="chip_pentecost">Pentecostes</string>
    <string name="chip_advent">Adviento</string>
    <string name="chip_christmas">Navidad</string>
    <string name="chip_worship">Avivamiento</string>
    <string name="chip_community">Convivencia</string>
    <string name="chip_holySpirit">Invocacion</string>
    <!-- Chips Acordes -->
    <string name="chip_A">A</string>
    <string name="chip_B">B</string>
    <string name="chip_C">C</string>
    <string name="chip_D">D</string>
    <string name="chip_E">E</string>
    <string name="chip_F">F</string>
    <string name="chip_G">G</string>
</resources>