<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_addSongToList"
        android:title="@string/add_toList"
        app:showAsAction="always"
        android:icon="@drawable/ic_add_to_list" />
    <item
        android:id="@+id/action_addSongToFavs"
        android:title="@string/add_toFavs"
        app:showAsAction="always"
        android:icon="@drawable/ic_add_favorite"/>
    <item
        android:id="@+id/action_shareSong"
        android:title="@string/share"
        app:showAsAction="always"
        android:icon="@drawable/ic_share"/>
    <item
        android:id="@+id/action_editSong"
        android:icon="@drawable/ic_edit_song"
        android:iconTint="@color/menuIconTextColor"
        android:iconTintMode="src_in"
        android:title="@string/edit_song"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_deleteSong"
        android:title="@string/delete"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_delete_elem"/>
    <item
        android:id="@+id/action_suggestEdit"
        android:title="@string/suggest_edit"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_edit_song"/>
</menu>