<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnViewSongs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:background="@drawable/my_button"
        android:fontFamily="@font/lato_bold"
        android:gravity="center"
        android:text="@string/button_viewSongs"
        android:textColor="@color/whiteColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintCircleRadius="100sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnViewSongsByTags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/my_button"
        android:fontFamily="@font/lato_bold"
        android:text="@string/button_viewSongsByTags"
        android:textColor="@color/whiteColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnViewSongs" />

    <Button
        android:id="@+id/btnViewMyLists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/my_button"
        android:fontFamily="@font/lato_bold"
        android:text="@string/button_viewMyLists"
        android:textColor="@color/whiteColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnViewSongsByTags" />

    <Button
        android:id="@+id/btnPlayChords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/my_button"
        android:fontFamily="@font/lato_bold"
        android:text="@string/button_playChords"
        android:textColor="@color/whiteColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnViewMyLists" />

</androidx.constraintlayout.widget.ConstraintLayout>